crates/vexor-compiler/tests/golden/error/output/keyword_as_ident.err
parse error at line 2, column 5
  |
2 | val match = 100
  |     ^
expected not a keyword